# BSMR-SDDMM

./: .gitignore  CMakeLists.txt  README.md  autoTest.sh  download_data.sh
ASpT_SDDMM_GPU/: sddmm_128.cu
HiPC18_SDDMM/: CMakeLists.txt
HiPC18_SDDMM/src/: Options.hpp  kernel.h  sddmm.cu  util.h
RoDe_SDDMM/: CMakeLists.txt
RoDe_SDDMM/include/: Options.hpp
RoDe_SDDMM/src/: RoDe-main.cu
autoTestTool/: autoAnalysisResults.cpp  autoTest.sh  autoTestTool.sh  build_program.sh  downloadMatrices.py  download_dlmc_dataset.sh  download_matrix_from_suiteSparse.py  make_matrices_list.sh  matrixDataVisualization.py  resultsVisualization.py  resultsVisualizationBarChart.py  resultsVisualizationLineChart.py  testTool.sh  testing_the_dataset_of_1.sh  testing_the_dataset_of_ASpT_paper.sh  testing_the_dataset_of_Sogang_University.sh  testing_the_dataset_of_isratnisa_paper.sh  testing_the_dataset_of_random.sh  testing_the_dataset_of_suiteSparse.sh
baselines/ASpT_SDDMM_GPU/: sddmm_128.cu  sddmm_32.cu
baselines/BSA_SpMM/: CMakeLists.txt
baselines/BSA_SpMM/include/: logger.h  matrices.h  option.h
baselines/BSA_SpMM/src/: bsa_spmm_benchmark.cpp  matrices.cpp  reordering_benchmark.cpp
baselines/RoDe_SDDMM/include/: Options.hpp
baselines/RoDe_SDDMM/src/: RoDe-main.cu  RoDeSddmm.cu  matrix_utils.cu
baselines/Sputnik_SDDMM/: CMakeLists.txt
baselines/Sputnik_SDDMM/include/: Options.hpp  Sputnik_sddmm.h  common_utils.h  dense_to_reg.h
baselines/Sputnik_SDDMM/src/: Sputnik_main.cu  Sputnik_sddmm.cu
baselines/cuSDDMM_SDDMM/: CMakeLists.txt
baselines/cuSDDMM_SDDMM/src/: Options.hpp  kernel.h  sddmm.cu  util.h
baselines/cuSPARSE_SDDMM/: CMakeLists.txt
baselines/cuSPARSE_SDDMM/include/: Matrix.hpp  Options.hpp  cuSparseSDDMM.cuh
baselines/cuSPARSE_SDDMM/src/: Matrix.cpp  cuSPARSE-main.cu
cuSDDMM_SDDMM/src/: sddmm.cu
dataset/: test.mtx  test2.mtx  test3.mtx
include/: BSMR.hpp  CuSparseSDDMM.hpp  CudaTimeCalculator.cuh  Logger.hpp  Matrix.hpp  Options.hpp  RPHM.hpp  ReBELL.hpp  TensorCoreConfig.cuh  checkData.hpp  cuSparseSDDMM.cuh  cuSparseSDDMM.hpp  cudaUtil.cuh  devMatrix.cuh  devMatrixKernel.cuh  devVector.cuh  host.hpp  kernel.cuh  parallelAlgorithm.cuh  reordering.hpp  sddmm.hpp  sddmmKernel.cuh  util.hpp  wmmaSetting.hpp  zcx_sddmm.cuh
isratnisa/HiPC18/: CMakeLists.txt
isratnisa/HiPC18/src/: Options.hpp  sddmm.cu  util.h
isratnisa/newInclude/: sddmm_isratnisa.h
scripts/: analyze_results.cpp  build_FlashSparse.sh  build_TCGNN.sh  build_program.sh  convert_mtx_to_npz.py  convert_smtx_to_mtx.py  download_dataset.sh  download_dataset_old.sh  download_dlmc_dataset.sh  download_matrix_from_suiteSparse.py  download_suiteSparse_dataset.sh  eval_hybrid_method.sh  exclude_invalid_dataset.py  exclude_invalid_dataset.sh  make_matrices_list.sh  plot_fig_5.sh  plot_fig_6.sh  plot_fig_7.sh  plot_hybrid.py  plot_reordering.py  plot_reordering_line_chart.py  plot_reordering_overhead.py  plot_sddmm.py  plot_sddmm_line_chart.py  run_BSA.sh  run_BSMR.sh  run_all.sh  run_baseline.sh  run_bsmr.sh  testScript.sh  testTool.sh  test_FlashSparse.py  test_TCGNN.py  test_script.sh  testing_dlmc_dataset.sh  testing_the_dataset_of_1.sh  testing_the_dataset_of_ASpT_paper.sh  testing_the_dataset_of_Sogang_University.sh  testing_the_dataset_of_isratnisa_paper.sh  testing_the_dataset_of_random.sh  (+3 more)
scripts/results_suiteSparse_dataset/BSA_results/: results_32.csv  results_hybrid_32.csv
scripts/results_suiteSparse_dataset/k128/: results_128.csv  results_hybrid_128.csv
scripts/results_suiteSparse_dataset/k256/: results_256.csv  results_hybrid_256.csv
scripts/results_suiteSparse_dataset/k32/: results_32.csv
scripts/results_suiteSparse_dataset/k64/: results_64.csv  results_hybrid_64.csv
src/: BSMR.cpp  Matrix.cpp  RPHM.cpp  ReBELL.cpp  checkData.cpp  colReordering.cpp  colReordering.cu  col_reordering.cpp  cudaUtil.cu  devMatrix.cu  devMatrixKernel.cu  host.cpp  kernel.cu  main.cu  parallelAlgorithm.cu  reordering.cpp  rowReordering.cu  row_reordering.cu  sddmm.cu  sddmmKernel.cu  sddmm__isratnisa.cu  util.cpp  util_isratnisa.cpp
